after meeting todos and rename subsec

--- a/ch_conclusions.tex
+++ b/ch_conclusions.tex
@@ -83,9 +83,7 @@ Finally, the results stand as a proof of concept which can be extended to other 
 
 
 
-
-
-\section{Drawbacks from our methodology}
+\section{Discussion on the methodology}
 
 There are several points that can be stated to point to weak spots on the methodology used.
 An important observation is that we can not directly jump from the human mobility insights found in this study, to conclusions from a model of disease spread.
@@ -128,6 +126,8 @@ Yet these were out of the scope of this work, due to the lack of ground truth in
 
 
 \section{ Lines of Future Work }
+
+\todo{De-itemize this section.}
 
 The mobility and social information extracted from CDRs analysis has been shown to be of practical use for long-term human migrations and for Chagas disease research.
 it adds value and information to help make data driven decisions which in turn is key to support epidemiological policy interventions in the region.
