--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -791,6 +791,7 @@ Yet it gives better overall performance on the CV error, when the model is corre
 
 \subsection{Gradient Tree Boosting}
 
+\todo{Move to appendix all necessary parts.}
 As explained before, the boosting methods build an ensemble model learned from other \textit{weaker} learners where decision trees are the most commonly used base models.
 This is the same for \textit{gradient tree boosting}.
 
