--- a/biblio.bib
+++ b/biblio.bib
@@ -6,7 +6,7 @@
 	booktitle = {XVII Simposio Internacional sobre Enfermedades Desatendidas},
  	location = {Buenos Aires, Argentina},
 },
-	
+
 
 @inproceedings{deMonasterio2016analyzing,
 	doi = {10.1109/asonam.2016.7752298},
@@ -17,7 +17,7 @@
 	author = {Juan de Monasterio and Alejo Salles and Carolina Lang and Diego Weinberg and Martin Minnoni and Matias Travizano and Carlos Sarraute},
 	title = {Analyzing the spread of {{C}}hagas disease with mobile phone data},
 	booktitle = {2016 {IEEE}/{ACM} International Conference on Advances in Social Networks Analysis and Mining ({ASONAM})}},
-	
+
 
 % machine learning citations
 
@@ -51,7 +51,7 @@
    abstract = {The Bayesian paradigm apparently only sometimes gives rise to Occam's Razor; at other times very large models perform well. We give simple examples of both kinds of behaviour. The two views are reconciled when measuring complexity of functions, rather than of the machinery used to implement them. We analyze the complexity of functions for some linear in the parameter models that are equivalent to Gaussian Processes, and always find Occam's Razor at work.},
    url = {http://www.kyb.tuebingen.mpg.de/fileadmin/user_upload/files/publications/pdf2215.pdf},
    web_url = {http://books.nips.cc/nips13.html},
-   editor = {Leen, T.K. , T.G. Dietterich, V. Tresp},
+   editor = {Leen, T.G. Dietterich, V. Tresp},
    publisher = {MIT Press},
    address = {Cambridge, MA, USA},
    booktitle = {Advances in Neural Information Processing Systems 13},
