--- a/ch_results.tex
+++ b/ch_results.tex
@@ -225,15 +225,22 @@ In this way se set a common ground to compare and evaluate the algorithms.
 
 As we will see later in \cref{tab:master_table_results}, this task, \cref{target2}, happened to be the hardest ones, as it resulted in the lowest metric scores for all classifiers.
 
-We performed extensive experimentation both on the Random Forest and Gradient Tree Boosting learners.
-In both we compared the results with those previously obtained for the Decision Tree, where we pointed to the improvements brought by these ensemble learners.
+The result of this for the
 
-\todo{FILL in with experimentation from RF and GBT.}
+ We compared both ensemble methods results in a cross-validation procedure that established how
+to the
+
+\todo{Add that random Forests improved the decision trees overfitting for Problem 2. Gradient Boosting better in bias with a slight incrase in overfit.}
+
 
 % By comparing this problem over the various tree methods we discuss on applications that these kind of datasets can provide.
 % to these kinds of tasks was elaborated.
 
-\todo{Add that random Forests improving decision tree overfitting. Gradient Boosting better in bias with a slight incrase in overfit}
+
+\todo{FILL in with experimentation from RF and GBT.}
+
+We performed extensive experimentation both on the Random Forest and Gradient Tree Boosting learners.
+In both we compared the results with those previously obtained for the Decision Tree, where we pointed to the improvements brought by these ensemble learners.
 
 
 % The Random Forest model played an important role in having the highest scores across all tasks and in presenting the best features of the dataset.
